added divs and favicon

--- a/index.html
+++ b/index.html
@@ -2,15 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/styles.css">
-    <title>My Website</title>
+    <link rel="icon" href="favicon.ico">
+    <title>Shao-Tsu Chen</title>
 </head>
 <body>
+    <div class="top-div">
+        <h1>Shao-Tsu</h1>
+        <p>Aspiring Web Developer</p>
+        <p>Learning web development and programming</p>
+    </div>
+    <div class="middle-div">
 
-    <h1 class="name">Shao-Tsu Chen</h1>
-    <p>BI Analyst | Aspiring coder</p>
-    <p>Learning web development and programming</p>
+    </div>
+    <div class="bottom-div">
+
+    </div>
     
 </body>
 </html>
