--- a/index.html
+++ b/index.html
@@ -4,20 +4,39 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
-    <title>Shao-Tsu Chen</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto&display=swap" rel="stylesheet">
+    <title>Shao-Tsu Chen | Web Dev</title>
 </head>
 <body>
     <div class="top-div">
-        <h1>Shao-Tsu</h1>
-        <p>Aspiring Web Developer</p>
-        <p>Learning web development and programming</p>
+        <h1>I'm Shao-Tsu</h1>
+        <p>Web Developer</p>
     </div>
+    <hr>
     <div class="middle-div">
-
+        <h1>Hello.</h1>
+        <p class="introduction">I am an aspiring web developer. I love chocolate.</p>        
     </div>
+    <hr>
+    <div class="my-skills">
+        <h1>My Skills</h1>
+    </div>
+    <hr>
     <div class="bottom-div">
-
+        <h1>Get In Touch</h1>
+        <p>If you love chocolate as much as I do.</p>
+        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
     </div>
-    
+    <div class="footer">
+        <table>
+            <tr>
+                <td class="social"><a href="https://www.linkedin.com/in/shaotsuchen/">LinkedIn</a>
+                <td class="social"><a href="https://github.com/shaotsuc">GitHub</a>
+            </tr>
+        </table>
+            <p class="copyright">© 2023 Shao-Tsu Chen</p>
+    </div>
 </body>
 </html>
